<resources>
    <string name="app_name">staffapp</string>
    <string name="title_activity_news">News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_company_news">Company News</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_entertainment">Entertainment</string>

    <string name="activity__business_school"> Safaricom e-Learning</string>
    <string name="title_featured">featured</string>
    <string name="title_search">search</string>
    <string name="title_profile">profile</string>
    <string name="title_register">register</string>
    <string name="card_text">demo_card_text</string>
    <string name="toolbar_title_business">Business</string>
    <string name="toolbar_title_personal">Personal</string>
    <string name="toolbar_title">Products and Services</string>
    <string name="staff_profile">Kim Test</string>
    <string name="staff_description">Radio Planning Engineer</string>
    <string name="quick_actions">My Quick Actions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_button">News</string>
    <string name="department_button">Department News</string>
    <string name="ruby">Ruby</string>
    <string name="title_activity_marketing">MarketingActivity</string>
    <string name="action_share">Share</string>
    <string name="action_explore">Read More...</string>
    <string name="safaricom_home">
        With the rising need for continuous communication and instant gratification, we keep seeking products and services that will gratify this ‘need’ instantaneously.

        Thanks to Safaricom home fibre, anyone at home can have unlimited internet access as long as you live within the coverage area.

        Safaricom Home Fibre is a service that allows you to have fast, reliable and unlimited internet access from the comfort of your home.

        All one has to do is register and then you are given a WiFi router that will enable you to have wireless and LAN internet access
    </string>
    <!-- CHAT: values -->

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="welcome_text">Logged as, </string>
    <string name="call_graph">Sign In </string>
    <string name="loading">Getting data from Graph...</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login with Microsoft Credentials</string>
    <string name="email">vkimosop@safaricom.co.ke</string>
    <string name="view_content">View Content</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="safaricom_revenue">
        These three growth drivers contributed 95% of total service revenue growth. During the
        first six months of the year, M-PESA was the main driver of growth, contributing 64% of
        service revenue growth, further accelerating displacement of traditional voice and
        messaging services.
        Mobile data and fixed data contributed 30% of total service revenue growth.
    </string>
    <string name="under_development">UNDER DEVELOPMENT</string>
    <string name="info_hub">Info Hub</string>
    <string name="title_activity_support">Support</string>
    <string name="todo">Todo</string>
</resources>
