<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_company_news"
            android:icon="@drawable/ic_menu_company_icon"
            android:title="@string/menu_company_news" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_entertainment"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_menu_sports"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_technology"
            android:title="@string/menu_technology" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_menu_trending"
            android:title="@string/menu_trending" />

    </group>

</menu>
